2007-06-27  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  != != ==

2007-06-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/manager.py (Dispatcher.__init__,
	  Dispatcher.setBouncerPortal, Dispatcher.removeAvatar,
	  Vishnu.__init__):
	  Pass bouncer portal to Dispatcher instead of Vishnu.
	  Check for existence of portal and bouncer before calling
	  logout, fixes test where there is no bouncer.

2007-06-27  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Pacify commentfascist.

2007-06-27  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Don't accept file descriptors for feeders unless we've actually
	  started the pipeline (READY or above).

2007-06-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py
	(ComponentAvatar.getEatersForFeeder): Pacify pyfascist.

	* flumotion/test/test_admin_admin.py (AdminTest.testReconnect):
	New test. Nifty!

	* flumotion/admin/admin.py (AdminModel.connectToManager): Some
	fixes to the deferred connection interface such that it respects
	keepTrying. The bit about keepTrying=True doesn't have tests yet
	though. See #621.
	(AdminModel.shutdown): Cancel the pending deferred connect, if
	there is one.

	* flumotion/common/errors.py (ConnectionCancelledError): New
	error.

	* flumotion/test/test_admin_admin.py (TestCaseWithManager.setUp)
	(TestCaseWithManager.tearDown): Add foo such that twisted
	exceptions don't cause errors. A better solution would be nice.
	(AdminTest.testConnectSuccess, AdminTest.testConnectFailure): New
	tests for the deferred connection interface.

	* flumotion/test/Makefile.am (EXTRA_DIST): 
	* flumotion/test/test_admin_admin.py: New test, not quite fleshed
	out yet.

	* flumotion/manager/manager.py (Vishnu.shutdown): New method,
	mostly for test cases.

2007-06-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
