@@ -42,3 +42,76 @@ if i > -1:
     fdpass.__path__.append(os.path.join(top_builddir, 'flumotion', 'extern',
         'fdpass'))
 
+
+from twisted.trial import unittest
+
+
+managerConf = """
+<planet>
+<manager name="planet">
+    <host>localhost</host>
+    <port>0</port>
+    <transport>tcp</transport>
+    <component name="manager-bouncer" type="htpasswdcrypt-bouncer">
+      <property name="data"><![CDATA[
+user:PSfNpHTkpTx1M
+]]></property>
+    </component>
+  </manager>
+</planet>
+"""
+
+
+# This bit about log flushing is repeated in various tests; would be
+# good to see about making it unnecessary. Perhaps returning a pb.Error
+# subclass instead of UnauthorizedLogin would do the trick.
+
+def ignoreErrors(*types):
+    log._getTheFluLogObserver().ignoreErrors(*types)
+
+def flushErrors(testcase, *types):
+    try:
+        testcase.flushLoggedErrors(*types)
+    except AttributeError:
+        from twisted.python import log as tlog
+        tlog.flushErrors(*types)
+    log._getTheFluLogObserver().clearIgnores()
+
+
+class TestCaseWithManager(unittest.TestCase):
+    def setUp(self):
+        from twisted.cred import error
+        from flumotion.twisted import pb
+        from flumotion.common import config, server, connection
+        from flumotion.manager import manager
+        from StringIO import StringIO
+
+        # don't output Twisted tracebacks for PB errors we will trigger
+        ignoreErrors(error.UnauthorizedLogin)
+
+        conf = config.ManagerConfigParser(StringIO(managerConf)).manager
+        self.vishnu = manager.Vishnu(conf.name,
+                                     unsafeTracebacks=True)
+        self.vishnu.loadManagerConfigurationXML(StringIO(managerConf))
+        s = server.Server(self.vishnu)
+        if conf.transport == "ssl":
+            p = s.startSSL(conf.host, conf.port, conf.certificate,
+                           configure.configdir) 
+        elif conf.transport == "tcp":
+            p = s.startTCP(conf.host, conf.port)
+        self.tport = p
+        self.port = p.getHost().port
+        i = connection.PBConnectionInfo('localhost', self.port,
+                                        conf.transport == 'ssl',
+                                        pb.Authenticator(username='user',
+                                                         password='test'))
+        self.connectionInfo = i
+        
+    def tearDown(self):
+        from twisted.cred import error
+
+        flushErrors(self, error.UnauthorizedLogin)
+
+        d = self.vishnu.shutdown()
+        d.addCallback(lambda _: self.tport.stopListening())
+        return d
