@@ -21,76 +21,15 @@
 
 import common
 
-from StringIO import StringIO
-
-from twisted.cred import error
 from twisted.trial import unittest
 from twisted.internet import reactor, defer
-from twisted.python import log as tlog
 
-from flumotion.common import config, server, connection, log
+from flumotion.common import connection, log
 from flumotion.twisted import pb
-from flumotion.manager import manager
 from flumotion.admin import admin
 
 
-managerConf = """
-<planet>
-<manager name="planet">
-    <host>localhost</host>
-    <port>0</port>
-    <transport>tcp</transport>
-    <component name="manager-bouncer" type="htpasswdcrypt-bouncer">
-      <property name="data"><![CDATA[
-user:PSfNpHTkpTx1M
-]]></property>
-    </component>
-  </manager>
-</planet>
-"""
-
-
-class TestCaseWithManager(unittest.TestCase):
-    def setUp(self):
-        # This bit about log flushing is repeated in various tests;
-        # would be good to see about making it unnecessary. Perhaps
-        # returning a pb.Error subclass instead of UnauthorizedLogin
-        # would do the trick.
-
-        # don't output Twisted tracebacks for PB errors we will trigger
-        log._getTheFluLogObserver().ignoreErrors(error.UnauthorizedLogin)
-
-        conf = config.ManagerConfigParser(StringIO(managerConf)).manager
-        self.vishnu = manager.Vishnu(conf.name,
-                                     unsafeTracebacks=True)
-        self.vishnu.loadManagerConfigurationXML(StringIO(managerConf))
-        s = server.Server(self.vishnu)
-        if conf.transport == "ssl":
-            p = s.startSSL(conf.host, conf.port, conf.certificate,
-                           configure.configdir) 
-        elif conf.transport == "tcp":
-            p = s.startTCP(conf.host, conf.port)
-        self.tport = p
-        self.port = p.getHost().port
-        i = connection.PBConnectionInfo('localhost', self.port,
-                                        conf.transport == 'ssl',
-                                        pb.Authenticator(username='user',
-                                                         password='test'))
-        self.connectionInfo = i
-        
-    def tearDown(self):
-        try:
-            self.flushLoggedErrors(error.UnauthorizedLogin)
-        except AttributeError:
-            tlog.flushErrors(error.UnauthorizedLogin)
-        log._getTheFluLogObserver().clearIgnores()
-
-        d = self.vishnu.shutdown()
-        d.addCallback(lambda _: self.tport.stopListening())
-        return d
-
-
-class AdminTest(TestCaseWithManager):
+class AdminTest(common.TestCaseWithManager):
     def testConstructor(self):
         model = admin.AdminModel()
 
